# soundlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: doppler.cpp  select_device.cpp  simple.cpp
include/: soundlib.h
licenses/: miniaudio  stb_vorbis
src/: main.cpp  miniaudio.c  sound.cpp  sound_source.cpp  soundlib.cpp
